--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <input type="number" id="speech-rate" value="1.2" min="0.5" max="2" step="0.1">
                 </div>
                 
-                <p>請上傳包含學科知識點的圖片（最多20張）。</p>
+                <p>請上傳溫習內容的圖片（最多20張）。</p>
                 <div class="upload-area" id="upload-area">
                     <i class="fas fa-images fa-2x" style="color: #1e88e5;"></i>
                     <p>點擊此處或拖放圖片到這裡</p>
