--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>AI 測驗產生器 (可保存版)</title>
+    <title>AI測驗產生器</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -189,8 +189,8 @@
         const MAX_IMAGES = 20;
         const MODEL_FALLBACK_LIST = [
             "google/gemini-2.0-flash-exp:free",
-            "google/gemini-flash-1.5",
-            "deepseek/deepseek-r1-0528:free"
+            "deepseek/deepseek-r1-0528:free",
+            "google/gemini-2.5-flash-preview-05-20"
         ];
 
         // --- DOM ELEMENTS ---
