--- a/QuestionwithAI.html
+++ b/QuestionwithAI.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>AI考卷</title>
+    <title>THIS-AI 試卷生成器</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -76,22 +76,14 @@
         #exam-result-code { background-color: #2d2d2d; color: #f8f8f2; padding: 20px; border-radius: 8px; max-height: 50vh; overflow-y: auto; white-space: pre-wrap; font-family: 'Courier New', Courier, monospace; margin-bottom: 15px; }
         .review-item { background: var(--light-blue-bg); border-radius: 12px; padding: 15px; margin-bottom: 15px; border-left: 5px solid; }
         .review-question { font-weight: bold; margin-bottom: 10px; }
-        /* NEW: Footer Style */
-        footer {
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 40px;
-            color: var(--secondary-color);
-            font-size: 0.9rem;
-        }
+        footer { text-align: center; padding: 20px 0; margin-top: 40px; color: var(--secondary-color); font-size: 0.9rem; }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
-            <!-- MODIFIED: Icon removed from logo div -->
             <div class="logo">
-                <h1>AI考卷</h1>
+                <h1>THIS-AI 試卷生成器</h1>
             </div>
         </header>
 
@@ -111,10 +103,6 @@
                         <input type="file" id="image-upload" accept="image/*" multiple style="display: none;">
                     </div>
                     <div id="image-preview-container"></div>
-                    <button class="btn btn-warning" id="import-quiz-btn">
-                        <i class="fas fa-file-import"></i> 導入互動測驗 (JSON)
-                        <input type="file" id="json-upload" accept=".json" style="display:none;">
-                    </button>
                 </div>
                 
                 <div id="tab-content-select-knowledge-points" class="tab-content hidden">
@@ -147,55 +135,27 @@
                  <p>已完成範圍設定，請選擇您想生成的內容類型。</p>
                 <div class="action-buttons">
                     <button class="btn" id="generate-quiz-btn" disabled>
-                        <i class="fas fa-bolt"></i> 生成互動測驗 (選擇題)
+                        <i class="fas fa-bolt"></i> 生成互動測驗
                     </button>
                     <button class="btn btn-success" id="generate-exam-btn" disabled>
-                        <i class="fas fa-file-alt"></i> 生成模擬試卷 (DOCX)
+                        <i class="fas fa-file-alt"></i> 生成模擬試卷
                     </button>
                 </div>
             </div>
         </section>
 
-        <!-- Other sections remain hidden initially -->
-        <section id="loading-section" class="hidden">
-            <div class="card">
-                <div class="spinner"></div>
-                <h2 id="loading-status">正在為您生成...</h2>
-                <p id="loading-subtitle">AI 正在努力工作中，請稍候。</p>
-            </div>
-        </section>
-        <section id="exam-result-section" class="hidden">
-            <div class="card">
-                <h2 class="card-title"><i class="fab fa-python"></i> Python 試卷腳本已生成</h2>
-                <p>請確保你已安裝函式庫 (`pip install python-docx matplotlib pillow reportlab`)，然後執行此腳本即可生成學生卷和教師卷。</p>
-                <pre><code id="exam-result-code"></code></pre>
-                <div class="action-buttons">
-                    <button class="btn btn-secondary" id="copy-exam-code-btn"><i class="fas fa-copy"></i> 複製代碼</button>
-                    <button class="btn btn-success" id="download-exam-script-btn"><i class="fas fa-download"></i> 下載 .py 檔案</button>
-                </div>
-                 <div class="action-buttons" style="margin-top: 20px;">
-                    <button class="btn" id="exam-restart-btn"> <i class="fas fa-redo"></i> 返回主頁 </button>
-                </div>
-            </div>
-        </section>
-        <section id="results-section" class="hidden">
-            <div class="card">
-                <h2 class="card-title"><i class="fas fa-poll"></i> 測驗結果</h2>
-                <div id="review-container"></div>
-                <div class="action-buttons" style="margin-top: 20px;">
-                    <button class="btn" id="quiz-restart-btn"> <i class="fas fa-redo"></i> 返回主頁 </button>
-                </div>
-            </div>
-        </section>
+        <!-- Other sections -->
+        <section id="loading-section" class="hidden">...</section>
+        <section id="exam-result-section" class="hidden">...</section>
+        <section id="results-section" class="hidden">...</section>
         
-        <!-- NEW: Footer Added -->
         <footer>
             Designed by Nathan Yuen. All Rights Reserved.
         </footer>
     </div>
 
     <script>
-        // --- PROFESSIONAL & COMPREHENSIVE KNOWLEDGE POINT DATABASE ---
+        // --- KNOWLEDGE POINT DATABASE & CONSTANTS ---
         const KNOWLEDGE_POINTS = {
             Math: {
                 P1: {"數範疇": ["100以內的數(數、讀、寫)", "單數與雙數", "數序與比較", "20以內加法", "20以內減法"], "圖形與空間範疇": ["基本平面圖形(圓、三角、正方、長方)", "基本立體圖形(球、正方、長方、圓柱)", "長度和距離的直接比較"], "度量範疇": ["香港流通貨幣(元、角)", "星期與日期", "閱讀鐘面(小時)"], "應用題": ["一步加減法應用題"]},
@@ -259,7 +219,7 @@
 
         const MODEL_FALLBACK_LIST = ["google/gemini-2.0-flash-exp:free", "deepseek/deepseek-r1-0528:free", "google/gemini-2.5-flash-preview-05-20"];
 
-        // --- DOM ELEMENTS & APP STATE (Remain the same) ---
+        // --- DOM ELEMENTS & APP STATE ---
         const configSection = document.getElementById('config-section');
         const loadingSection = document.getElementById('loading-section');
         const examResultSection = document.getElementById('exam-result-section');
@@ -285,7 +245,7 @@
         let uploadedFiles = [];
         let quizData = [];
 
-        // --- INITIALIZATION & EVENT LISTENERS ---
+        // --- INITIALIZATION ---
         function init() {
             tabButtons.forEach(button => button.addEventListener('click', () => switchTab(button.dataset.tab)));
             kpSubject.addEventListener('change', populateGrades);
@@ -468,9 +428,9 @@
                     };
                     if (responseFormat) payload.response_format = responseFormat;
 
-                    const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+                    const response = await fetch("https://aiquiz.ycm927.workers.dev", { // CORRECTED: Using the worker URL
                         method: "POST",
-                        headers: { "Content-Type": "application/json", "HTTP-Referer": "https://nathan927.github.io/aiquiz", "X-Title": "AI Exam Generator" },
+                        headers: { "Content-Type": "application/json" }, // CORRECTED: Simplified headers for worker
                         body: JSON.stringify(payload)
                     });
 
