--- a/QuestionwithAI.html
+++ b/QuestionwithAI.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>AI 知識點測驗與試卷產生器 (專業版)</title>
+    <title>THIS-AI 考卷制作器</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -104,7 +104,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <h1>AI 知識點測驗與試卷產生器</h1>
+                <h1>THIS-AI 考卷制作器</h1>
             </div>
         </header>
 
